sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:12: error: not found: value j
			if (plusPetit(j,j-1)) {
                                      ^AlgCocktailSort1:13: error: not found: value j
				echange(j,j-1);
                                        ^