sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
	var verif=false;
	do{
		for (i <- 0 to getNombreValeurs()-2 by 1) {
			if (plusPetit(i+1,i)) {
				echange(i,i+1);
				verif=true;
			}
		}
		for (i <- getNombreValeurs()-2 to 0 by -1) {
			if (plusPetit(j,j-1)) {
				echange(j,j-1);
				verif=true;
			}
		}
	} while(!verif)
}
